# CI-CD

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
